# physical_ai_humanoid_robotics

./: .clang-format  .gitignore  .npmignore  GEMINI.md  package-lock.json  package.json  tasks.md
.github/workflows/: deploy.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
book/: authors.yml  docusaurus.config.js  package-lock.json  package.json  sidebars.js
book/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
book/blog/: 2025-12-03-first-post.md
book/docs/: index.md
docs/: README.md  full_system_integration_testing.md  sim_to_real_transfer.md  software_architecture.md
docs/performance/: latency_optimization.md
docs/testing/: power_validation.md  real_world_benchmarks.md  sim_benchmarks.md
rag-chatbot/: README.md  test_gemini_embeddings.py  test_system.sh
rag-chatbot/backend/: check.py  main.py  requirements.txt  start.sh
rag-chatbot/frontend/: index.html  package-lock.json  package.json  start.sh
rag-chatbot/scripts/: ingest.py  requirements.txt
specs/002-auth-homepage-ui/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/1-humanoid-specs/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-ui-auth-enhancements/: data-model.md  plan.md  quickstart.md  spec.md
specs/2-auth-homepage-ui/: spec.md
specs/web-app-enhancements/: plan.md  (+4 more)
src/hardware/: CMakeLists.txt  package.xml
src/hardware/src/: camera_node.cpp  imu_node.cpp  safety_observer.cpp  torque_controller.cpp
(+123 files in other folders)
